--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qr-web-ui",
+  "name": "reliable-qr",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,18 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.16"
+    "qrcode": "^1.5.3",
+    "lucide-react": "^0.294.0",
+    "@types/qrcode": "^1.5.5"
   },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.16"
+    "eslint-config-next": "14.0.0"
   }
 }
