--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@types/qrcode": "^1.5.5",
     "class-variance-authority": "^0.7.1",
+    "d3": "^7.9.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "qrcode": "^1.5.4",
@@ -24,6 +25,9 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.30.0",
+    "@types/d3": "^7.4.3",
     "@types/node": "^24.0.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
